--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,112 @@
+2019-10-17  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r250589. rdar://problem/55927251
+
+    Storage Access API: document.hasStorageAccess() should return true when the cookie policy allows access
+    https://bugs.webkit.org/show_bug.cgi?id=202435
+    <rdar://problem/55718526>
+    
+    Reviewed by Brent Fulgham.
+    
+    Source/WebCore:
+    
+    WebKit's Storage Access API implementation has so far only looked at whether ITP is
+    blocking cookie access or not. However, the default cookie policy is still in
+    effect underneath ITP. document.hasStorageAccess() should return true if the
+    third-party:
+    a) is not classified by ITP, and
+    b) has cookies which implies it can use cookies as third-party according to the
+    default cookie policy.
+    
+    Tests: http/tests/storageAccess/has-storage-access-false-by-default-ephemeral.html
+           http/tests/storageAccess/has-storage-access-true-if-third-party-has-cookies-ephemeral.html
+           http/tests/storageAccess/has-storage-access-true-if-third-party-has-cookies.html
+    
+    * platform/network/NetworkStorageSession.h:
+    * platform/network/cocoa/NetworkStorageSessionCocoa.mm:
+    (WebCore::NetworkStorageSession::hasCookies const):
+    * platform/network/curl/NetworkStorageSessionCurl.cpp:
+    (WebCore::NetworkStorageSession::hasCookies const):
+        Not yet implemented. Always says false.
+    * platform/network/soup/NetworkStorageSessionSoup.cpp:
+    (WebCore::NetworkStorageSession::hasCookies const):
+        Not yet implemented. Always says false.
+    
+    Source/WebKit:
+    
+    WebKit's Storage Access API implementation has so far only looked at whether ITP is
+    blocking cookie access or not. However, the default cookie policy is still in
+    effect underneath ITP. document.hasStorageAccess() should return true if the
+    third-party:
+    a) is not classified by ITP, and
+    b) has cookies which implies it can use cookies as third-party according to the
+    default cookie policy.
+    
+    * NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
+    (WebKit::ResourceLoadStatisticsMemoryStore::hasStorageAccess):
+    * NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
+    (WebKit::WebResourceLoadStatisticsStore::hasCookies):
+    * NetworkProcess/Classifier/WebResourceLoadStatisticsStore.h:
+    * NetworkProcess/NetworkConnectionToWebProcess.cpp:
+    (WebKit::NetworkConnectionToWebProcess::hasStorageAccess):
+    * NetworkProcess/NetworkProcess.cpp:
+    (WebKit::NetworkProcess::registrableDomainsWithWebsiteData):
+    
+    Tools:
+    
+    This change makes sure topPrivatelyControlledDomain() correctly handles domains
+    with leading dots, as often used in cookie domains.
+    
+    * TestWebKitAPI/Tests/WebCore/PublicSuffix.cpp:
+    (TestWebKitAPI::TEST_F):
+    
+    LayoutTests:
+    
+    WebKit's Storage Access API implementation has so far only looked at whether ITP is
+    blocking cookie access or not. However, the default cookie policy is still in
+    effect underneath ITP. document.hasStorageAccess() should return true if the
+    third-party:
+    a) is not classified by ITP, and
+    b) has cookies which implies it can use cookies as third-party according to the
+    default cookie policy.
+    
+    * http/tests/storageAccess/has-storage-access-false-by-default-ephemeral-expected.txt: Added.
+    * http/tests/storageAccess/has-storage-access-false-by-default-ephemeral.html: Copied from LayoutTests/http/tests/storageAccess/has-storage-access-true-if-feature-off.html.
+    * http/tests/storageAccess/has-storage-access-true-if-third-party-has-cookies-ephemeral-expected.txt: Added.
+    * http/tests/storageAccess/has-storage-access-true-if-third-party-has-cookies-ephemeral.html: Copied from LayoutTests/http/tests/storageAccess/has-storage-access-true-if-feature-off.html.
+    * http/tests/storageAccess/has-storage-access-true-if-third-party-has-cookies-expected.txt: Added.
+    * http/tests/storageAccess/has-storage-access-true-if-third-party-has-cookies.html: Renamed from LayoutTests/http/tests/storageAccess/has-storage-access-true-if-feature-off.html.
+    * platform/ios/TestExpectations:
+    * platform/mac-wk2/TestExpectations:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@250589 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-01  John Wilander  <wilander@apple.com>
+
+            Storage Access API: document.hasStorageAccess() should return true when the cookie policy allows access
+            https://bugs.webkit.org/show_bug.cgi?id=202435
+            <rdar://problem/55718526>
+
+            Reviewed by Brent Fulgham.
+
+            WebKit's Storage Access API implementation has so far only looked at whether ITP is
+            blocking cookie access or not. However, the default cookie policy is still in
+            effect underneath ITP. document.hasStorageAccess() should return true if the
+            third-party:
+            a) is not classified by ITP, and
+            b) has cookies which implies it can use cookies as third-party according to the
+            default cookie policy.
+
+            * NetworkProcess/Classifier/ResourceLoadStatisticsMemoryStore.cpp:
+            (WebKit::ResourceLoadStatisticsMemoryStore::hasStorageAccess):
+            * NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
+            (WebKit::WebResourceLoadStatisticsStore::hasCookies):
+            * NetworkProcess/Classifier/WebResourceLoadStatisticsStore.h:
+            * NetworkProcess/NetworkConnectionToWebProcess.cpp:
+            (WebKit::NetworkConnectionToWebProcess::hasStorageAccess):
+            * NetworkProcess/NetworkProcess.cpp:
+            (WebKit::NetworkProcess::registrableDomainsWithWebsiteData):
+
 2019-10-15  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r251086. rdar://problem/56237429
