--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,5 +1,65 @@
 2019-10-20  Babak Shafiei  <bshafiei@apple.com>
 
+        Cherry-pick r251188. rdar://problem/56340816
+
+    WebAudioSourceProviderAVFObjC::provideInput should set its WebAudioBufferList parameters correctly
+    https://bugs.webkit.org/show_bug.cgi?id=202930
+    <rdar://problem/56006776>
+    
+    Reviewed by Eric Carlson.
+    
+    Source/WebCore:
+    
+    There is a time where the bus channel number and audio source channel numbers may be different.
+    In case the bus channel number is less than the audio source channel number, initialization of
+    the WebAudioBufferList might not be fully done.
+    In that case, output silence and return early.
+    Reduce the number of frames to process based on the number of frames the output audio bus plans to process.
+    
+    Partially covered by new API test (this a race so we cannot reproduce the crash easily).
+    
+    * Modules/webaudio/MediaStreamAudioSourceNode.cpp:
+    (WebCore::MediaStreamAudioSourceNode::process):
+    Make sure to process the number of frames the output bus expect.
+    * platform/mediastream/mac/WebAudioSourceProviderAVFObjC.mm:
+    (WebCore::WebAudioSourceProviderAVFObjC::provideInput):
+    
+    Tools:
+    
+    Add a test that has an audio track that goes from 1 to 2 channels while being piped to a WebAudio pipeline.
+    
+    * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
+    * TestWebKitAPI/Tests/WebKit/GetUserMedia.mm:
+    (-[GUMMessageHandler userContentController:didReceiveScriptMessage:]):
+    (TestWebKitAPI::TEST):
+    * TestWebKitAPI/Tests/WebKit/getUserMedia-webaudio.html: Added.
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251188 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-16  Youenn Fablet  <youenn@apple.com>
+
+            WebAudioSourceProviderAVFObjC::provideInput should set its WebAudioBufferList parameters correctly
+            https://bugs.webkit.org/show_bug.cgi?id=202930
+            <rdar://problem/56006776>
+
+            Reviewed by Eric Carlson.
+
+            There is a time where the bus channel number and audio source channel numbers may be different.
+            In case the bus channel number is less than the audio source channel number, initialization of
+            the WebAudioBufferList might not be fully done.
+            In that case, output silence and return early.
+            Reduce the number of frames to process based on the number of frames the output audio bus plans to process.
+
+            Partially covered by new API test (this a race so we cannot reproduce the crash easily).
+
+            * Modules/webaudio/MediaStreamAudioSourceNode.cpp:
+            (WebCore::MediaStreamAudioSourceNode::process):
+            Make sure to process the number of frames the output bus expect.
+            * platform/mediastream/mac/WebAudioSourceProviderAVFObjC.mm:
+            (WebCore::WebAudioSourceProviderAVFObjC::provideInput):
+
+2019-10-20  Babak Shafiei  <bshafiei@apple.com>
+
         Apply patch. rdar://problem/56427498
 
     2019-10-20  John Wilander  <wilander@apple.com>
