--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,46 @@
+2019-10-28  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r251603. rdar://problem/56670801
+
+    Introduce AudioTrackPrivateMediaStreamCocoa::clear()
+    https://bugs.webkit.org/show_bug.cgi?id=203369
+    <rdar://problem/49017262>
+    
+    Reviewed by Jer Noble.
+    
+    Introduce the clear method to make sure the AudioTrackPrivteMediaStreamCocoa is in a clean state.
+    This will help further simplifications.
+    
+    * platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
+    (WebCore::MediaPlayerPrivateMediaStreamAVFObjC::~MediaPlayerPrivateMediaStreamAVFObjC):
+    (WebCore::MediaPlayerPrivateMediaStreamAVFObjC::updateTracks):
+    * platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.cpp:
+    (WebCore::AudioTrackPrivateMediaStreamCocoa::~AudioTrackPrivateMediaStreamCocoa):
+    (WebCore::AudioTrackPrivateMediaStreamCocoa::clear):
+    * platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.h:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251603 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-25  youenn fablet  <youenn@apple.com>
+
+            Introduce AudioTrackPrivateMediaStreamCocoa::clear()
+            https://bugs.webkit.org/show_bug.cgi?id=203369
+            <rdar://problem/49017262>
+
+            Reviewed by Jer Noble.
+
+            Introduce the clear method to make sure the AudioTrackPrivteMediaStreamCocoa is in a clean state.
+            This will help further simplifications.
+
+            * platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
+            (WebCore::MediaPlayerPrivateMediaStreamAVFObjC::~MediaPlayerPrivateMediaStreamAVFObjC):
+            (WebCore::MediaPlayerPrivateMediaStreamAVFObjC::updateTracks):
+            * platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.cpp:
+            (WebCore::AudioTrackPrivateMediaStreamCocoa::~AudioTrackPrivateMediaStreamCocoa):
+            (WebCore::AudioTrackPrivateMediaStreamCocoa::clear):
+            * platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.h:
+
 2019-10-24  Kocsen Chung  <kocsen_chung@apple.com>
 
         Cherry-pick r250863. rdar://problem/56579654
