--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,3 +1,48 @@
+2019-11-05  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r248121. rdar://problem/56903580
+
+    Crash under WebProcessProxy::didBecomeUnresponsive()
+    https://bugs.webkit.org/show_bug.cgi?id=200346
+    <rdar://problem/53795984>
+    
+    Reviewed by Geoffrey Garen.
+    
+    Make sure the BackgroundProcessResponsivenessTimer / ResponsivenessTimer ref their client
+    while they call mayBecomeUnresponsive() / willChangeIsResponsive() / didChangeIsResponsive()
+    / didBecomeUnresponsive() on their client, in case calling one of these ends up destroying
+    the client.
+    
+    * UIProcess/BackgroundProcessResponsivenessTimer.cpp:
+    (WebKit::BackgroundProcessResponsivenessTimer::setResponsive):
+    * UIProcess/ResponsivenessTimer.cpp:
+    (WebKit::ResponsivenessTimer::timerFired):
+    * UIProcess/ResponsivenessTimer.h:
+    * UIProcess/WebProcessProxy.h:
+    
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248121 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-08-01  Chris Dumez  <cdumez@apple.com>
+
+            Crash under WebProcessProxy::didBecomeUnresponsive()
+            https://bugs.webkit.org/show_bug.cgi?id=200346
+            <rdar://problem/53795984>
+
+            Reviewed by Geoffrey Garen.
+
+            Make sure the BackgroundProcessResponsivenessTimer / ResponsivenessTimer ref their client
+            while they call mayBecomeUnresponsive() / willChangeIsResponsive() / didChangeIsResponsive()
+            / didBecomeUnresponsive() on their client, in case calling one of these ends up destroying
+            the client.
+
+            * UIProcess/BackgroundProcessResponsivenessTimer.cpp:
+            (WebKit::BackgroundProcessResponsivenessTimer::setResponsive):
+            * UIProcess/ResponsivenessTimer.cpp:
+            (WebKit::ResponsivenessTimer::timerFired):
+            * UIProcess/ResponsivenessTimer.h:
+            * UIProcess/WebProcessProxy.h:
+
 2019-11-04  Alan Coon  <alancoon@apple.com>
 
         Apply patch. rdar://problem/56864381
