--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,46 @@
+2019-11-10  Kocsen Chung  <kocsen_chung@apple.com>
+
+        Cherry-pick r252297. rdar://problem/57058404
+
+    [WebAuthn] Add quirk needed to support legacy Google NFC Titan security keys
+    https://bugs.webkit.org/show_bug.cgi?id=204024
+    <rdar://problem/56962320>
+    
+    Reviewed by Brent Fulgham.
+    
+    Source/WebCore:
+    
+    Covered by manual tests.
+    
+    * Modules/webauthn/fido/FidoConstants.h:
+    
+    Source/WebKit:
+    
+    Some legacy U2F keys such as Google T1 Titan don't understand the FIDO applet command. Instead,
+    they are configured to only have the FIDO applet. Therefore, when the above command fails, we
+    use U2F_VERSION command to double check if the connected tag can actually speak U2F, indicating
+    we are interacting with one of these legacy keys.
+    
+    * UIProcess/WebAuthentication/Cocoa/NfcConnection.mm:
+    (WebKit::fido::compareVersion):
+    (WebKit::fido::trySelectFidoApplet):
+    (WebKit::NfcConnection::transact const):
+    (WebKit::NfcConnection::didDetectTags):
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252297 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-11-08  Jiewen Tan  <jiewen_tan@apple.com>
+
+            [WebAuthn] Add quirk needed to support legacy Google NFC Titan security keys
+            https://bugs.webkit.org/show_bug.cgi?id=204024
+            <rdar://problem/56962320>
+
+            Reviewed by Brent Fulgham.
+
+            Covered by manual tests.
+
+            * Modules/webauthn/fido/FidoConstants.h:
+
 2019-11-07  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r252175. rdar://problem/56971561
