--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,18 @@
+2019-11-18  Kocsen Chung  <kocsen_chung@apple.com>
+
+        Apply patch. rdar://problem/57283187
+
+    2019-11-18  John Wilander  <wilander@apple.com>
+
+            Check if ITP is on before applying third-party cookie blocking
+            https://bugs.webkit.org/show_bug.cgi?id=204109
+            <rdar://problem/57120772>
+
+            Reviewed by Chris Dumez and Alexey Proskuryakov.
+
+            * http/tests/resourceLoadStatistics/no-third-party-cookie-blocking-when-itp-is-off-expected.txt: Added.
+            * http/tests/resourceLoadStatistics/no-third-party-cookie-blocking-when-itp-is-off.html: Added.
+
 2019-11-04  Alan Coon  <alancoon@apple.com>
 
         Cherry-pick r251957. rdar://problem/56887511
