--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,5 +1,20 @@
 2019-11-18  Alan Coon  <alancoon@apple.com>
 
+        Apply patch. rdar://problem/57257755
+
+    2019-11-18  John Wilander  <wilander@apple.com>
+
+            Check if ITP is on before applying third-party cookie blocking
+            https://bugs.webkit.org/show_bug.cgi?id=204109
+            <rdar://problem/57120772>
+
+            Reviewed by Chris Dumez and Alexey Proskuryakov.
+
+            * http/tests/resourceLoadStatistics/no-third-party-cookie-blocking-when-itp-is-off-expected.txt: Added.
+            * http/tests/resourceLoadStatistics/no-third-party-cookie-blocking-when-itp-is-off.html: Added.
+
+2019-11-18  Alan Coon  <alancoon@apple.com>
+
         Cherry-pick r251680. rdar://problem/57283563
 
     Hidden framesets should provide default edgeInfo value
