--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,38 @@
 2019-11-18  Alan Coon  <alancoon@apple.com>
 
+        Apply patch. rdar://problem/57257755
+
+    2019-11-18  John Wilander  <wilander@apple.com>
+
+            Check if ITP is on before applying third-party cookie blocking
+            https://bugs.webkit.org/show_bug.cgi?id=204109
+            <rdar://problem/57120772>
+
+            Reviewed by Chris Dumez and Alexey Proskuryakov.
+
+            This change makes sure WebCore::NetworkStorageSession knows
+            whether ITP is on or off and checks that first thing in
+            WebCore::NetworkStorageSession::shouldBlockCookies().
+
+            This check was never needed before since if ITP was off,
+            there would be no classified domains and thus the function
+            would always return false. However,
+            https://trac.webkit.org/changeset/251353/webkit introduced
+            full third-party cookie blocking for websites without user
+            interaction and that rule is checked before checking domain
+            classification. The effect was unconditional third-party
+            cookie blocking if ITP is off. This changes fixes that bug.
+
+            Note that this patch is branch-specific and expected to not
+            apply to trunk.
+
+            * NetworkProcess/NetworkSession.cpp:
+            (WebKit::NetworkSession::setResourceLoadStatisticsEnabled):
+                Now tells WebCore::NetworkStorageSession the status of
+                ITP.
+
+2019-11-18  Alan Coon  <alancoon@apple.com>
+
         Apply patch. rdar://problem/57123571
 
     2019-11-18  Chris Dumez  <cdumez@apple.com>
