--- a/Source/WebKit/ChangeLog
+++ b/Source/WebKit/ChangeLog
@@ -1,5 +1,51 @@
 2019-11-18  Alan Coon  <alancoon@apple.com>
 
+        Apply patch. rdar://problem/57283569
+
+    2019-11-18  Alex Christensen  <achristensen@webkit.org>
+
+            WKContentRuleLists should block requests from service workers
+            https://bugs.webkit.org/show_bug.cgi?id=201980
+            <rdar://problem/55516735>
+
+            Reviewed by Chris Dumez.
+
+            Test: http/tests/contentextensions/service-worker.https.html
+
+            Also covered by an API test.
+
+            * Shared/ServiceWorkerInitializationData.cpp: Added.
+            (WebKit::ServiceWorkerInitializationData::encode const):
+            (WebKit::ServiceWorkerInitializationData::decode):
+            * Shared/ServiceWorkerInitializationData.h: Added.
+            * Sources.txt:
+            * UIProcess/UserContent/WebUserContentControllerProxy.cpp:
+            (WebKit::WebUserContentControllerProxy::addProcess):
+            (WebKit::WebUserContentControllerProxy::contentRuleListData):
+            * UIProcess/UserContent/WebUserContentControllerProxy.h:
+            * UIProcess/WebProcessPool.cpp:
+            (WebKit::WebProcessPool::establishWorkerContextConnectionToNetworkProcess):
+            (WebKit::WebProcessPool::createWebPage):
+            * UIProcess/WebProcessPool.h:
+            * UIProcess/WebProcessProxy.cpp:
+            (WebKit::WebProcessProxy::createForServiceWorkers):
+            (WebKit::WebProcessProxy::establishServiceWorkerContext):
+            (WebKit::contentRuleListsFromIdentifier):
+            (WebKit::WebProcessProxy::enableServiceWorkers):
+            * UIProcess/WebProcessProxy.h:
+            * WebKit.xcodeproj/project.pbxproj:
+            * WebProcess/Storage/WebSWContextManagerConnection.cpp:
+            (WebKit::WebSWContextManagerConnection::WebSWContextManagerConnection):
+            (WebKit::m_userAgent):
+            (WebKit::WebSWContextManagerConnection::installServiceWorker):
+            * WebProcess/Storage/WebSWContextManagerConnection.h:
+            * WebProcess/WebProcess.cpp:
+            (WebKit::WebProcess::establishWorkerContextConnectionToNetworkProcess):
+            * WebProcess/WebProcess.h:
+            * WebProcess/WebProcess.messages.in:
+
+2019-11-18  Alan Coon  <alancoon@apple.com>
+
         Apply patch. rdar://problem/57257755
 
     2019-11-18  John Wilander  <wilander@apple.com>
