--- a/Source/WebCore/ChangeLog
+++ b/Source/WebCore/ChangeLog
@@ -1,3 +1,33 @@
+2019-11-19  Alan Coon  <alancoon@apple.com>
+
+        Cherry-pick r251678. rdar://problem/57283567
+
+    Drop code for X-Temp-Tablet HTTP header experiment
+    https://bugs.webkit.org/show_bug.cgi?id=203524
+    <rdar://problem/55791195>
+    
+    Reviewed by Ryosuke Niwa.
+    
+    * loader/cache/CachedResourceLoader.cpp:
+    (WebCore::CachedResourceLoader::CachedResourceLoader):
+    (WebCore::CachedResourceLoader::requestResource):
+    * loader/cache/CachedResourceLoader.h:
+    
+    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251678 268f45cc-cd09-0410-ab3c-d52691b4dbfc
+
+    2019-10-28  Chris Dumez  <cdumez@apple.com>
+
+            Drop code for X-Temp-Tablet HTTP header experiment
+            https://bugs.webkit.org/show_bug.cgi?id=203524
+            <rdar://problem/55791195>
+
+            Reviewed by Ryosuke Niwa.
+
+            * loader/cache/CachedResourceLoader.cpp:
+            (WebCore::CachedResourceLoader::CachedResourceLoader):
+            (WebCore::CachedResourceLoader::requestResource):
+            * loader/cache/CachedResourceLoader.h:
+
 2019-11-18  Alan Coon  <alancoon@apple.com>
 
         Apply patch. rdar://problem/57257755
